# models/azure_blob.js
@@ -1,27 +1,31 @@
 'use strict';
 const {
-    Model
+  Model
 } = require('sequelize');
 
 module.exports = (sequelize, DataTypes) => {
-    class AzureBlob extends Model {
-        static associate(models) {
-            AzureBlob.belongsTo(models.Attachment, {});
-        }
-    };
-    AzureBlob.init({
-        container_name: {
-            type: DataTypes.STRING(100),
-            unique: true
-        },
-        blob_name: {
-            type: DataTypes.STRING(100),
-            unique: true
-        },
-        size: DataTypes.FLOAT(12, 9)
-    }, {
-        sequelize,
-        modelName: 'AzureBlob',
-    });
-    return AzureBlob;
+  class AzureBlob extends Model {
+    static associate(models) {
+      AzureBlob.belongsTo(models.Attachment, {});
+    }
+  }
+  AzureBlob.init({
+    container_name: {
+      type: DataTypes.STRING(100)
+    },
+    blob_name: {
+      type: DataTypes.STRING(100)
+    },
+    size: DataTypes.INTEGER(12)
+  }, {
+    sequelize,
+    modelName: 'AzureBlob',
+    indexes: [
+      {
+        unique: true,
+        fields: ['container_name', 'blob_name']
+      }
+    ]
+  });
+  return AzureBlob;
 };
